@@ -1,4 +1,12 @@
 2006-09-05  Jesse van den Kieboom  <jesse@icecrew.nl>
+	
+	* plugins/filebrowser/gedit-file-browser-store.c:
+	
+	Really fixed bug 354397 – crash in filebrowser plugin when going to 
+	parent dir. This time the first issue mentioned in the bug report
+	is fixed.
+
+2006-09-05  Jesse van den Kieboom  <jesse@icecrew.nl>
 
 	* plugins/filebrowser/gedit-file-browser-store.c:
 	
